# aegis-guard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirments.txt  test_run.py  test_run_basic.py
examples/: client_simulation.py  client_simulation_ollama.py
src/aegisagent/: budget.py  schema.py  workflow.py
